カラースキーム作成（WIP）

--- a/digital-agency-design-system-vue/src/assets/style/color/primitiveColors.scss
+++ b/digital-agency-design-system-vue/src/assets/style/color/primitiveColors.scss
@@ -3,10 +3,10 @@
  */
 
 :root {
-  /** White */
+  /* White */
   --color-white-1000: #fff;
 
-  /** Sea */
+  /* Sea */
   --color-sea-900: #0000be;
   --color-sea-800: #0024ce;
   --color-sea-700: #0031d8;
@@ -18,7 +18,7 @@
   --color-sea-100: #c5d7fb;
   --color-sea-50: #e8f1fe;
 
-  /** Sumi */
+  /* Sumi */
   --color-sumi-900: #1A1A1C;
   --color-sumi-800: #414143;
   --color-sumi-700: #626264;
@@ -30,7 +30,7 @@
   --color-sumi-100: #F1F1F4;
   --color-sumi-50: #F8F8FB;
 
-  /** Forest */
+  /* Forest */
   --color-forest-900: #115A36;
   --color-forest-800: #197A4B;
   --color-forest-700: #1D8B56;
@@ -42,27 +42,27 @@
   --color-forest-100: #C2E5D1;
   --color-forest-50: #E6F5EC;
 
-  /** Wood */
-  --color-forest-900: #B65200;
-  --color-forest-800: #C16800;
-  --color-forest-700: #C87504;
-  --color-forest-600: #CD820A;
-  --color-forest-500: #D18D0F;
-  --color-forest-400: #D69C2B;
-  --color-forest-300: #DCAC4D;
-  --color-forest-200: #E5C47F;
-  --color-forest-100: #EFDBB1;
-  --color-forest-50: #F8F1E0;
+  /* Wood */
+  --color-wood-900: #B65200;
+  --color-wood-800: #C16800;
+  --color-wood-700: #C87504;
+  --color-wood-600: #CD820A;
+  --color-wood-500: #D18D0F;
+  --color-wood-400: #D69C2B;
+  --color-wood-300: #DCAC4D;
+  --color-wood-200: #E5C47F;
+  --color-wood-100: #EFDBB1;
+  --color-wood-50: #F8F1E0;
 
-  /** Sun */
-  --color-forest-900: #D50000;
-  --color-forest-800: #EC0000;
-  --color-forest-700: #FA1606;
-  --color-forest-600: #FF220D;
-  --color-forest-500: #FF4B36;
-  --color-forest-400: #FF5838;
-  --color-forest-300: #FF7B5C;
-  --color-forest-200: #FFA28B;
-  --color-forest-100: #FFC8B8;
-  --color-forest-50: #FFE7E6;
+  /* Sun */
+  --color-sun-900: #D50000;
+  --color-sun-800: #EC0000;
+  --color-sun-700: #FA1606;
+  --color-sun-600: #FF220D;
+  --color-sun-500: #FF4B36;
+  --color-sun-400: #FF5838;
+  --color-sun-300: #FF7B5C;
+  --color-sun-200: #FFA28B;
+  --color-sun-100: #FFC8B8;
+  --color-sun-50: #FFE7E6;
 }
