--- a/digital-agency-design-system-vue/src/assets/style/style.scss
+++ b/digital-agency-design-system-vue/src/assets/style/style.scss
@@ -1,10 +1,3 @@
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-
-  &::after {
-    padding: 0;
-    margin: 0;
-  }
-}
+/** Color Scheme */
+@use "./color/primitiveColors";
+@use "./color/semanticColors.scss";
