--- a/digital-agency-design-system-vue/src/assets/style/color/primitiveColors.scss
+++ b/digital-agency-design-system-vue/src/assets/style/color/primitiveColors.scss
@@ -19,50 +19,50 @@
   --color-sea-50: #e8f1fe;
 
   /* Sumi */
-  --color-sumi-900: #1A1A1C;
+  --color-sumi-900: #1a1a1c;
   --color-sumi-800: #414143;
   --color-sumi-700: #626264;
   --color-sumi-600: #757578;
   --color-sumi-500: #949497;
-  --color-sumi-400: #B4B4B7;
-  --color-sumi-300: #D8D8DB;
-  --color-sumi-200: #E8E8EB;
-  --color-sumi-100: #F1F1F4;
-  --color-sumi-50: #F8F8FB;
+  --color-sumi-400: #b4b4b7;
+  --color-sumi-300: #d8d8db;
+  --color-sumi-200: #e8e8eb;
+  --color-sumi-100: #f1f1f4;
+  --color-sumi-50: #f8f8fb;
 
   /* Forest */
-  --color-forest-900: #115A36;
-  --color-forest-800: #197A4B;
-  --color-forest-700: #1D8B56;
-  --color-forest-600: #259D63;
-  --color-forest-500: #2CAC6E;
-  --color-forest-400: #51B883;
-  --color-forest-300: #71C598;
-  --color-forest-200: #9BD4B5;
-  --color-forest-100: #C2E5D1;
-  --color-forest-50: #E6F5EC;
+  --color-forest-900: #115a36;
+  --color-forest-800: #197a4b;
+  --color-forest-700: #1d8b56;
+  --color-forest-600: #259d63;
+  --color-forest-500: #2cac6e;
+  --color-forest-400: #51b883;
+  --color-forest-300: #71c598;
+  --color-forest-200: #9bd4b5;
+  --color-forest-100: #c2e5d1;
+  --color-forest-50: #e6f5ec;
 
   /* Wood */
-  --color-wood-900: #B65200;
-  --color-wood-800: #C16800;
-  --color-wood-700: #C87504;
-  --color-wood-600: #CD820A;
-  --color-wood-500: #D18D0F;
-  --color-wood-400: #D69C2B;
-  --color-wood-300: #DCAC4D;
-  --color-wood-200: #E5C47F;
-  --color-wood-100: #EFDBB1;
-  --color-wood-50: #F8F1E0;
+  --color-wood-900: #b65200;
+  --color-wood-800: #c16800;
+  --color-wood-700: #c87504;
+  --color-wood-600: #cd820a;
+  --color-wood-500: #d18d0f;
+  --color-wood-400: #d69c2b;
+  --color-wood-300: #dcac4d;
+  --color-wood-200: #e5c47f;
+  --color-wood-100: #efdbb1;
+  --color-wood-50: #f8f1e0;
 
   /* Sun */
-  --color-sun-900: #D50000;
-  --color-sun-800: #EC0000;
-  --color-sun-700: #FA1606;
-  --color-sun-600: #FF220D;
-  --color-sun-500: #FF4B36;
-  --color-sun-400: #FF5838;
-  --color-sun-300: #FF7B5C;
-  --color-sun-200: #FFA28B;
-  --color-sun-100: #FFC8B8;
-  --color-sun-50: #FFE7E6;
+  --color-sun-900: #d50000;
+  --color-sun-800: #ec0000;
+  --color-sun-700: #fa1606;
+  --color-sun-600: #ff220d;
+  --color-sun-500: #ff4b36;
+  --color-sun-400: #ff5838;
+  --color-sun-300: #ff7b5c;
+  --color-sun-200: #ffa28b;
+  --color-sun-100: #ffc8b8;
+  --color-sun-50: #ffe7e6;
 }
