カラースキーム作成

--- a/digital-agency-design-system-vue/src/assets/style/color/primitiveColors.scss
+++ b/digital-agency-design-system-vue/src/assets/style/color/primitiveColors.scss
@@ -4,16 +4,18 @@
 
 :root {
   /* White */
-  --color-white-1000: #fff;
+  --color-white: #fff;
 
   /* Sea */
   --color-sea-900: #0000be;
   --color-sea-800: #0024ce;
   --color-sea-700: #0031d8;
+  --color-sea-600-dark: #0030B2;
   --color-sea-600: #003ee5;
   --color-sea-500: #0946f1;
   --color-sea-400: #4979f5;
-  --color-sea-300: #4979f5;
+  --color-sea-300-dark: #3F72F6;
+  --color-sea-300: #7096F8;
   --color-sea-200: #9db7f9;
   --color-sea-100: #c5d7fb;
   --color-sea-50: #e8f1fe;
