--- a/digital-agency-design-system-vue/src/assets/style/color/semanticColors.scss
+++ b/digital-agency-design-system-vue/src/assets/style/color/semanticColors.scss
@@ -3,12 +3,12 @@
  */
 
 :root {
-  /* text */
+  /* Text */
   --color-text-light-body: var(--color-sumi-900);
-  --color-text-dark-body: var(--color-white-1000);
+  --color-text-dark-body: var(--color-white);
   --color-text-body: var(--color-sumi-900);
   @media (prefer-color-scheme: dark) {
-    --color-text-body: var(--color-white-1000);
+    --color-text-body: var(--color-white);
   }
 
   --color-text-light-description: var(--color-sumi-700);
@@ -25,11 +25,11 @@
     --color-text-placeHolder: var(--color-sumi-500);
   }
 
-  --color-text-light-onFill: var(--color-white-1000);
-  --color-text-dark-onFill: var(--color-white-1000);
-  --color-text-onFill: var(--color-white-1000);
+  --color-text-light-onFill: var(--color-white);
+  --color-text-dark-onFill: var(--color-white);
+  --color-text-onFill: var(--color-white);
   @media (prefer-color-scheme: dark) {
-    --color-text-onFill: var(--color-white-1000);
+    --color-text-onFill: var(--color-white);
   }
 
   --color-text-light-link: var(--color-sea-600);
@@ -62,10 +62,10 @@
 
   /* Icon */
   --color-icon-light-label: var(--color-sumi-900);
-  --color-icon-dark-label: var(--color-white-1000);
+  --color-icon-dark-label: var(--color-white);
   --color-icon-label: var(--color-sumi-900);
   @media (prefer-color-scheme: dark) {
-    --color-icon-label: var(--color-white-1000);
+    --color-icon-label: var(--color-white);
   }
 
   --color-icon-light-active: var(--color-sea-600);
@@ -89,7 +89,7 @@
     --color-icon-disabled: var(--color-sumi-600);
   }
 
-  /* button */
+  /* Button */
   --color-button-light-normal: var(--sea-600);
   --color-button-dark-normal: var(--sea-300);
   --color-button-normal: var(--sea-600);
@@ -104,11 +104,11 @@
     --color-button-hover: var(--sea-400);
   }
 
-  --color-button-light-active: var(--sea-700);
-  --color-button-dark-active: var(--sea-400);
-  --color-button-active: var(--sea-700);
+  --color-button-light-active: var(--sea-600-dark);
+  --color-button-dark-active: var(--sea-300-dark);
+  --color-button-active: var(--sea-600-dark);
   @media (prefer-color-scheme: dark) {
-    --color-button-active: var(--sea-400);
+    --color-button-active: var(--sea-300-dark);
   }
 
   --color-button-light-disabled: var(--color-sumi-500);
@@ -118,10 +118,10 @@
     --color-button-disabled: var(--color-sumi-600);
   }
 
-  /* background */
-  --color-background-light-primary: var(--color-white-1000);
+  /* Background */
+  --color-background-light-primary: var(--color-white);
   --color-background-dark-primary: var(--color-sumi-900);
-  --color-background-primary: var(--color-white-1000);
+  --color-background-primary: var(--color-white);
   @media (prefer-color-scheme: dark) {
     --color-background-primary: var(--color-sumi-900);
   }
@@ -140,6 +140,83 @@
     --color-background-tertiary: var(--color-sumi-800);
   }
 
-  /* border */
+  /* Border */
   --color-border-light-field: var(--color-sumi-900);
+  --color-border-dark-field: var(--color-white);
+  --color-border-field: var(--color-sumi-900);
+  @media (prefer-color-scheme: dark) {
+    --color-border-field: var(--color-white);
+  }
+
+  --color-boder-light-divider: var(--color-sumi-300);
+  --color-boder-dark-divider: var(--color-sumi-700);
+  --color-boder-divider: var(--color-sumi-300);
+  @media (prefer-color-scheme: dark) {
+    --color-boder-divider: var(--color-sumi-700);
+  }
+
+  --color-border-light-focused: var(--color-wood-500);
+  --color-border-dark-focused: var(--color-wood-500);
+  --color-border-focused: var(--color-wood-500);
+  @media (prefer-color-scheme: darcolor-k) {
+    --color-border-focused: var(--color-wood-500);
+  }
+
+  --color-border-light-selected: var(--color-sea-600);
+  --color-border-dark-selected: var(--color-sea-300);
+  --color-border-selected: var(--color-sea-600);
+  @media (prefer-color-scheme: dark) {
+    --color-border-selected: var(--color-sea-300);
+  }
+
+  --color-border-light-alert: var(--color-sun-800);
+  --color-border-dark-alert: var(--color-sun-500);
+  --color-border-alert: var(--color-sun-800);
+  @media (prefer-color-scheme: dark) {
+    --color-border-alert: var(--color-sun-500);
+  }
+
+  --color-border-light-disabled: var(--color-sumi-300);
+  --color-border-dark-disabled: var(--color-sumi-300);
+  --color-border-disabled: var(--color-sumi-300);
+  @media (prefer-color-scheme: dark) {
+    --color-border-disabled: var(--color-sumi-300);
+  }
+
+  /* Status*/
+  --color-status-light-success: var(--color-forest-600);
+  --color-status-dark-success: var(--color-forest-600);
+  --color-status-success: var(--color-forest-600);
+  @media (prefer-color-scheme: dark) {
+    --color-status-success: var(--color-forest-600);
+  }
+
+  --color-status-light-alert: var(--color-sun-800);
+  --color-status-dark-alert: var(--color-sun-500);
+  --color-status-alert: var(--color-sun-800);
+  @media (prefer-color-scheme: dark) {
+    --color-status-alert: var(--color-sun-500);
+  }
+
+  --color-status-light-warning: var(--color-wood-800);
+  --color-status-darj-warning: var(--color-wood-500);
+  --color-status-warning: var(--color-wood-800);
+  @media (prefer-color-scheme: dark) {
+    --color-status-warning: var(--color-wood-500);
+  }
+
+  /* Chart */
+  --color-chart-light-primary: var(--color-sea-600);
+  --color-chart-dark-primary: var(--color-sea-100);
+  --color-chart-primary: var(--color-sea-600);
+  @media (prefer-color-scheme: dark) {
+    --color-chart-primary: var(--color-sea-100);
+  }
+
+  --color-chart-light-secondary: var(--color-sea-400);
+  --color-chart-dark-secondary: var(--color-sea-100);
+  --color-chart-secondary: var(--color-sea-400);
+  @media (prefer-color-scheme: dark) {
+    --color-chart-secondary: var(--color-sea-100);
+  }
 }
