見出しコンポーネント制作（WIP）

--- a/digital-agency-design-system-vue/src/assets/style/style.scss
+++ b/digital-agency-design-system-vue/src/assets/style/style.scss
@@ -1,3 +1,6 @@
 /** Color Scheme */
 @use "./color/primitiveColors";
 @use "./color/semanticColors.scss";
+
+/** Fonts */
+@use "./fonts/font.scss";
