--- a/digital-agency-design-system-vue/src/assets/style/basic/basicStyle.scss
+++ b/digital-agency-design-system-vue/src/assets/style/basic/basicStyle.scss
@@ -1,3 +1,15 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  &::after,
+  &:before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+}
+
 html {
   font-family: "Noto Sans JP", sans-serif;
   color: var(--color-text-body);
