--- a/digital-agency-design-system-vue/src/assets/style/basic/basicStyle.scss
+++ b/digital-agency-design-system-vue/src/assets/style/basic/basicStyle.scss
@@ -1,16 +1,18 @@
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+
   &::after,
-  &:before {
-    margin: 0;
-    padding: 0;
+  &::before {
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
   }
 }
 
 html {
   font-family: "Noto Sans JP", sans-serif;
   color: var(--color-text-body);
+  background-color: var(--color-background-primary);
 }
