ボタンコンポーネント作成

--- a/digital-agency-design-system-vue/src/assets/style/style.scss
+++ b/digital-agency-design-system-vue/src/assets/style/style.scss
@@ -5,5 +5,8 @@
 /** Fonts */
 @use "./fonts/font.scss";
 
+/* easing */
+@use "./easing/easing.scss";
+
 /** Basic Style */
 @use "./basic/basicStyle.scss";
