--- a/digital-agency-design-system-vue/src/assets/style/color/semanticColors.scss
+++ b/digital-agency-design-system-vue/src/assets/style/color/semanticColors.scss
@@ -72,9 +72,9 @@
   --color-border-light-field: var(--color-sumi-900);
   --color-border-dark-field: var(--color-white);
   --color-border-field: var(--color-sumi-900);
-  --color-boder-light-divider: var(--color-sumi-300);
-  --color-boder-dark-divider: var(--color-sumi-700);
-  --color-boder-divider: var(--color-sumi-300);
+  --color-border-light-divider: var(--color-sumi-300);
+  --color-border-dark-divider: var(--color-sumi-700);
+  --color-border-divider: var(--color-sumi-300);
   --color-border-light-focused: var(--color-wood-500);
   --color-border-dark-focused: var(--color-wood-500);
   --color-border-focused: var(--color-wood-500);
