オーバーフロー周りの不具合修正

--- a/digital-agency-design-system-vue/src/assets/style/basic/basicStyle.scss
+++ b/digital-agency-design-system-vue/src/assets/style/basic/basicStyle.scss
@@ -29,6 +29,12 @@ html {
 }
 
 /* テーブルの基本スタイル */
+.tableWrapper {
+  display: inline-block;
+  max-width: 100%;
+  overflow: auto;
+}
+
 table {
   font-size: 1rem;
   color: var(--color-text-body);
