--- a/digital-agency-design-system-vue/src/assets/style/basic/basicStyle.scss
+++ b/digital-agency-design-system-vue/src/assets/style/basic/basicStyle.scss
@@ -60,3 +60,9 @@ th {
   font-weight: normal;
   background-color: var(--color-background-tertiary);
 }
+
+/* 基本のリンクスタイル */
+a {
+  color: var(--color-text-link);
+  text-decoration: underline;
+}
