カラースキームの変更可能に

--- a/digital-agency-design-system-vue/src/assets/style/basic/basicStyle.scss
+++ b/digital-agency-design-system-vue/src/assets/style/basic/basicStyle.scss
@@ -11,7 +11,7 @@
   }
 }
 
-html {
+body {
   font-family: "Noto Sans JP", sans-serif;
   color: var(--color-text-body);
   background-color: var(--color-background-primary);
