--- a/digital-agency-design-system-vue/src/assets/style/basic/basicStyle.scss
+++ b/digital-agency-design-system-vue/src/assets/style/basic/basicStyle.scss
@@ -67,4 +67,9 @@ th {
 a {
   color: var(--color-text-link);
   text-decoration: underline;
+
+  &:focus-visible {
+    border-radius: 4px;
+    outline: 2px solid var(--color-border-focused);
+  }
 }
