カラーパレットのアップデート

--- a/digital-agency-design-system-vue/src/assets/style/color/primitiveColors.scss
+++ b/digital-agency-design-system-vue/src/assets/style/color/primitiveColors.scss
@@ -7,12 +7,12 @@
   --color-white: #fff;
 
   /* Sea */
-  --color-sea-900: #0000be;
-  --color-sea-800: #0024ce;
+  --color-sea-900: #000082;
+  --color-sea-800-dark: #000f7f;
+  --color-sea-800: #0017c1;
   --color-sea-700: #0031d8;
-  --color-sea-600-dark: #0030b2;
-  --color-sea-600: #003ee5;
-  --color-sea-500: #0946f1;
+  --color-sea-600: #1a3ee8;
+  --color-sea-500: #264af4;
   --color-sea-400: #4979f5;
   --color-sea-300-dark: #3f72f6;
   --color-sea-300: #7096f8;
@@ -52,9 +52,9 @@
   --color-wood-500: #d18d0f;
   --color-wood-400: #d69c2b;
   --color-wood-300: #dcac4d;
-  --color-wood-200: #e5c47f;
-  --color-wood-100: #efdbb1;
-  --color-wood-50: #f8f1e0;
+  --color-wood-200: #e1c383;
+  --color-wood-100: #e7d8b9;
+  --color-wood-50: #f3eee5;
 
   /* Sun */
   --color-sun-900: #d50000;
